...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_message"
        app:layout_constraintEnd_toEndOf="parent"
...
